# quick-pong

./: CMakeLists.txt  README.md
resources/: resources.qrc
src/cpp/: main.cpp  player_touch_handler.cpp  player_touch_handler.h
src/qml/: Ball.qml  KeyPressHandler.qml  Main.qml  Player.qml
